# internal/status/response_message.go
@@ -1,10 +1,5 @@
 package status
 
-import "errors"
-
-func DbError() error {
-	return errors.New("db connection error")
-}
-func PeopleNotFound() error {
-	return errors.New("people not found")
-}
+const (
+	DELETED = "person deleted"
+)
